# adal

./: .gitignore  README.md  create_embeddings.py  datasets_exploration.ipynb  embedder.py  lit20.epub  lit20.jsonl  m3_embedder.py  prepare_tropes_dataset.py  process_ebooks.py  pyproject.toml  rag_pipeline.py  rate_limiter.py  reddit_prompts_pipeline.py  simple_tvtropes_generation.py  trope_analysis.py  trope_similarity_analyzer.py
api/: embedder.py  main.py  schemas.py
