[project]
name = "adal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adalflow>=1.0.2",
    "beautifulsoup4>=4.13.3",
    "ebooklib>=0.18",
    "faiss-cpu>=1.10.0",
    "nltk>=3.9.1",
    "ollama>=0.4.7",
    "openai>=1.61.0",
    "orjson>=3.10.15",
    "tiktoken>=0.8.0",
]
