[project]
name = "adal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adalflow==1.0.3",
    "beautifulsoup4>=4.13.3",
    "bm25s>=0.2.9",
    "ebooklib>=0.18",
    "faiss-cpu>=1.10.0",
    "flagembedding>=1.3.4",
    "jax[cpu]>=0.5.2",
    "limits>=4.0.1",
    "nltk>=3.9.1",
    "ollama>=0.4.7",
    "openai>=1.61.0",
    "opik>=1.5.8",
    "orjson>=3.10.15",
    "python-dotenv>=1.0.1",
    "semchunk>=3.1.3",
    "tiktoken>=0.8.0",
    "torch>=2.6.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[dependency-groups]
notebooks = [
    "ipykernel>=6.29.5",
]
